Fix overflowing modal header text in ie10

--- a/ESSArch_Core/frontend/static/frontend/styles/modules/modals.scss
+++ b/ESSArch_Core/frontend/static/frontend/styles/modules/modals.scss
@@ -18,3 +18,7 @@ body.modal-open {
   background-color: #f4f4f4;
   padding: 10px;
 }
+
+.modal-title {
+  width: 100%; //Fixes overflow in ie10
+}
